# Wishing

./: .gitmodules  LICENSE.md  LICENSE.txt  README.md  WishingEngine_README.md
CMake/: Cleanup.cmake  GetZip.cmake  ImportDownloadedShared.cmake  ImportInstalledShared.cmake  ImportLibDownloaded.cmake  ImportLibInstalled.cmake  ImportShared.cmake  ImportShared2.cmake  InitDefaultRootPaths.cmake  InlineDownloadAndUnzip.cmake  InlineIntegrateTool.cmake  InlinedLinkLibraries.cmake  InstalDynamicLinkinglLibrary.cmake  InstalStaticLinkinglLibrary.cmake  InstallExecutable.cmake  InstallLibrary.cmake  IntegrateNiflectGenTool.cmake  IntegrateTool.cmake  Option.cmake  ProjectBegin.cmake  ProjectEnd.cmake  Release.cmake  Setup.cmake
CMake/Platform/Linux/: Build.sh  Generate.sh  Install.sh  InstallRelease.sh  Release.sh  Setup.sh  Update.sh
CMake/Platform/MinGW/: Clean.sh  Update.sh
CMake/Platform/Windows/: Build.bat  Clean.bat  Generate.bat  Install.bat  InstallRelease.bat  (+3 more)
Doc/: README_CH.md
Doc/b备用资料/: Boost信号量超时等待与取消.md  Ubuntu挂载VirtualBox共享文件夹.md  cmake获取target所有宏定义.md  ezEngine的DebugDevShipping三种Build配置.md  ftpexe下载.md  git_submodule_接入.md  git子模块接入.md  一些名词定义疑问.txt  内存分配.md  处理文件编码.md  将生成代码以静态库链接的示例_略有可行性.txt  改提交作者.txt
Doc/备用资料/: Ubuntu挂载VirtualBox共享文件夹.md  关于License.md  将生成代码以静态库链接的示例_略有可行性.txt  生成Mangling符号.md  编辑器 UI Backend 的一种方案.md  项目通过cmake接入生成代码.md
Project/: CommonAfterProject.cmake  CommonBeforeProject.cmake  InitRootPath.cmake  RootPathSetup.cmake
Project/CppProjectGenTool/: CMakeLists.txt
Project/CppProjectGenTool/CppProjectGen/: CMakeLists.txt
Project/CppProjectGenTool/CppProjectGenCLI/: CMakeLists.txt
Project/Interedit/: CMakeLists.txt  Common.cmake  Editor.cmake  Engine.cmake  Niflect.cmake
Project/Interedit/Base/: CMakeLists.txt
Project/Interedit/Editor/: CMakeLists.txt
Project/Interedit/Engine/: CMakeLists.txt
Project/Interedit/Engine/TestModule1/: CMakeLists.txt
Project/Interedit/Niflect/: CMakeLists.txt
Project/Interedit/TestModule0/: CMakeLists.txt
Project/Interedit/TestModule1/: CMakeLists.txt  TestModule1.cmake
Project/Niflect/: CMakeLists.txt  Default.cmake  Niflect.cmake  RootPathSetup.cmake  RootProjectPath.cmake
Project/Niflect/NiflectGen/: CMakeLists.txt  libclang.cmake
Project/Niflect/NiflectGen/libclang/: CMakeLists.txt
Project/NiflectGenTool/: CMakeLists.txt
Project/NiflectGenTool/Base/: CMakeLists.txt
Project/NiflectGenTool/NiflectGen/: CMakeLists.txt  Licensed_libclang.cmake  libclangShared.cmake  libclangStatic.cmake  libclangStaticDeps.cmake
Project/NiflectGenTool/NiflectGen/Licensed_libclang/: Shared.cmake  Static.cmake
Project/NiflectGenTool/NiflectGenTool/: CMakeLists.txt
Project/Sample/: InitSampleRootPath.cmake  SampleRootPathSetup.cmake
Project/Sample/AssetCreator/: CMakeLists.txt  Install.cmake
Project/Sample/AssetCreator/Base/: Default.cmake  Niflect.cmake
Project/Sample/AssetCreator/Editor/: CMakeLists.txt  Licensed_Qt.cmake  Licensed_boost.cmake
Project/Sample/AssetCreator/Engine/: CMakeLists.txt
Project/Sample/ContentCreator/: CMakeLists.txt
Project/Sample/ContentCreator/Editor/: CMakeLists.txt
Project/Sample/ContentCreator/Engine/: CMakeLists.txt
Project/Sample/ContentCreator/WishingEngine/: CMakeLists.txt  Licensed_boost.cmake
Project/Sample/PropertyEditor/: CMakeLists.txt  Install.cmake
Project/Sample/SampleProjectTemplate/: CMakeLists.txt
Project/Sample/SampleProjectTemplate/Editor/: CMakeLists.txt
Project/Sample/SampleProjectTemplate/SampleAPI/: CMakeLists.txt
Project/Sample/SampleProjectTemplate/SampleApp/: CMakeLists.txt
Project/Sample/SampleProject_Qt_5_8_0/: CMakeLists.txt
Project/Sample/SampleProject_Qt_5_8_0/Editor/: CMakeLists.txt  Licensed_boost.cmake
Project/Sample/SampleProject_Qt_5_8_0/Engine/: CMakeLists.txt
Project/Sample/SampleProject_Qt_6_8_1/: CMakeLists.txt
Project/Sample/SampleProject_Qt_6_8_1/Editor/: CMakeLists.txt  Licensed_Qt.cmake
Project/Sample/SampleProject_Qt_6_8_1/Engine/: CMakeLists.txt
Project/Sample/TestHotReloading/: CMakeLists.txt  Install.cmake  IntegrateCreator.cmake
Project/Sample/TestHotReloading/MyProject/: CMakeLists.txt
Project/TestEditorCLI/: CMakeLists.txt
Project/TestEditorCLI/Base/: CMakeLists.txt  Default.cmake
Project/TestEditorCLI/Niflect/: CMakeLists.txt  GenTool.cmake  Niflect.cmake
Project/TestEditorCLI/TestEditorCLI/: CMakeLists.txt
Project/TestEditorCLI/TestEngine/: CMakeLists.txt
Project/TestEditorCLI/TestEngine/TestModule1/: CMakeLists.txt
Project/TestEditorCLI/TestModule0/: CMakeLists.txt
Project/TestEditorCLI/TestModule1/: Shared.cmake  TestModule1.cmake
Project/Wishing/: CMakeLists.txt  Install.cmake
Project/WishingEngine/: CMakeLists.txt
Project/WishingEngine/WishingEngine/: CMakeLists.txt  Shared.cmake
Project/WishingProjectTool/: CMakeLists.txt
Project/WishingProjectTool/WishingProjectTool/: CMakeLists.txt
Source/CppProjectGen/: CppProjectGenCommon.h
Source/Editor/: EditorObject.h  Main.cpp
Source/Engine/: BuiltinAccessor.h  DerivedObject.h  Engine.cpp  Engine.h  Engine.private.h  EngineAccessorSetting.h  EngineCommon.h  EngineDevelopmentMacro.h  EngineObject.cpp  EngineObject.h  EngineTypeBindingSetting.h  EnumAccessor.h
Source/Interedit/: CMakeLists.txt
Source/Interedit/Editor/: CMakeLists.txt
Source/Interedit/Engine/: CMakeLists.txt  Engine.h
Source/Niflect/: NiflectAccessor.h  NiflectAccessorSetting.h  NiflectAddr.h  NiflectBase.cpp  NiflectBase.h  NiflectBindingSetting.h  NiflectCommon.h  NiflectField.cpp  NiflectField.h  NiflectMacro.h  NiflectMethod.h  NiflectNata.h  NiflectRegisteredType.h  NiflectRegistration.h  NiflectTable.h  NiflectType.h
Source/NiflectGen/: NiflectGen.cpp  NiflectGen.h  NiflectGenCommon.h  NiflectGenDevelopmentMacro.h
Source/NiflectGenTool/: Main.cpp
Source/TestModule0/: TestModule0.cpp  TestModule0.h  TestModule0.private.h  TestModule0Common.h
Source/TestModule1/: TestClass1.h  TestModule1.cpp  TestModule1.h
Source/WishingProjectTool/: CMakeCodeTemplate.cpp  CMakeCodeTemplate.h  CMakeTemplate.cpp  Main.cpp
(+616 files in other folders)
